--- a/account-service/build.gradle
+++ b/account-service/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-
+	implementation 'org.modelmapper:modelmapper:2.3.0'
 }
 
 tasks.named('test') {
