--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 paypal:
-  paypal-url: http://localhost:8080/paypal/pay
+  paypal-url: http://localhost:8080/api/paypal/pay
 bank:
-  bank-url: http://localhost:8080/bank/pay
+  bank-url: http://localhost:8080/api/bank/pay
 credit:
-  bank-url: http://localhost:8080/credit/pay
+  bank-url: http://localhost:8080/api/credit/pay
