--- a/authentication-service/build.gradle
+++ b/authentication-service/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'edu.miu.sa'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = '17'
 
 configurations {
@@ -31,4 +31,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+jar {
+    enabled = false
 }
