--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     timeout-per-shutdown-phase: 10s
 server:
   shutdown: graceful
-  port: 8087
+  port: 8085
 
 ---
 spring:
@@ -11,13 +11,19 @@ spring:
     activate:
       on-profile: dev
   datasource:
-    url: jdbc:mysql://192.168.64.2:30306/product-db
+    url: jdbc:mysql://192.168.64.2:30306/order-db
     username: root
     password: mysql
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: none
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/sa-mini-project2-realm-prod
+          jwk-set-uri: http://localhost:8080/realms/sa-mini-project2-realm-prod/protocol/openid-connect/certs
 
 product-service-secret-key: "3e02714e-4d78-11ed-bdc3-0242ac120002"
 ---
@@ -26,11 +32,18 @@ spring:
     activate:
       on-profile: prod
   datasource:
-    url: jdbc:mysql://mysql:3306/product-db
+    url: jdbc:mysql://mysql:3306/order-db
     username: root
     password: mysql
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: none
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://keycloak-service/realms/sa-mini-project1-realm-prod
+          jwk-set-uri: http://keycloak-service/realms/sa-mini-project1-realm-prod/protocol/openid-connect/certs
+
 product-service-secret-key: ${PRODUCT_SERVICE_SECRET_KEY}
