--- a/kubernetes/order-deployment.yml
+++ b/kubernetes/order-deployment.yml
@@ -39,7 +39,7 @@ spec:
             - name: PRODUCT_SERVICE_SECRET_KEY
               valueFrom:
                 configMapKeyRef:
-                  name: services-config
+                  name: service-configmap
                   key: product-service-secret-key
           ports:
             - name: http
