--- a/kubernetes/service-configmap.yml
+++ b/kubernetes/service-configmap.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: services-config
+  name: service-configmap
 data:
   order-service-secret-key: "3e025e16-4d78-11ed-bdc3-0242ac120002"
   account-service-secret-key: "3e026744-4d78-11ed-bdc3-0242ac120002"
@@ -11,3 +11,7 @@ data:
   paypal-service-secret-key: "3e026eba-4d78-11ed-bdc3-0242ac120002"
   product-service-secret-key: "3e02714e-4d78-11ed-bdc3-0242ac120002"
   shipping-service-secret-key: "3e027946-4d78-11ed-bdc3-0242ac120002"
+
+  paypal-service-url: "http://payment-service:8080"
+  bank-service-url: "http://bank-service:8080"
+  credit-service-url: "http://credit-service:8080"
