--- a/bank-service/src/main/resources/application.yml
+++ b/bank-service/src/main/resources/application.yml
@@ -1,2 +1,22 @@
+spring:
+  lifecycle:
+    timeout-per-shutdown-phase: 10s
 server:
+  shutdown: graceful
   port: 8083
+
+---
+spring:
+  config:
+    activate:
+      on-profile: dev
+
+shipping-service-secret-key: "3e027946-4d78-11ed-bdc3-0242ac120002"
+shipping-service-url: http://localhost:8088/service/shipping
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+
+shipping-service-secret-key: ${SHIPPING_SERVICE_SECRET_KEY}
