--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -3,7 +3,6 @@ spring:
     timeout-per-shutdown-phase: 10s
 server:
   shutdown: graceful
-  port: 8085
 
 ---
 spring:
@@ -24,6 +23,9 @@ spring:
         jwt:
           issuer-uri: http://localhost:8080/realms/sa-mini-project2-realm-prod
           jwk-set-uri: http://localhost:8080/realms/sa-mini-project2-realm-prod/protocol/openid-connect/certs
+
+server:
+  port: 8085
 
 product-service-secret-key: "3e02714e-4d78-11ed-bdc3-0242ac120002"
 payment-service-secret-key: "3e026eba-4d78-11ed-bdc3-0242ac120002"
@@ -50,6 +52,9 @@ spring:
         jwt:
           issuer-uri: http://keycloak-service/realms/sa-mini-project1-realm-prod
           jwk-set-uri: http://keycloak-service/realms/sa-mini-project1-realm-prod/protocol/openid-connect/certs
+
+server:
+  port: 8085
 
 product-service-secret-key: ${PRODUCT_SERVICE_SECRET_KEY}
 product-service-url: ${PRODUCT_SERVICE_URL}
