--- a/credit-service/src/main/resources/application.yml
+++ b/credit-service/src/main/resources/application.yml
@@ -3,13 +3,15 @@ spring:
     timeout-per-shutdown-phase: 10s
 server:
   shutdown: graceful
-  port: 8084
 
 ---
 spring:
   config:
     activate:
       on-profile: dev
+
+server:
+  port: 8084
 
 shipping-service-secret-key: "3e027946-4d78-11ed-bdc3-0242ac120002"
 shipping-service-url: http://localhost:8088/service/shipping
@@ -20,6 +22,9 @@ spring:
   config:
     activate:
       on-profile: prod
+
+server:
+  port: 8080
 
 shipping-service-secret-key: ${SHIPPING_SERVICE_SECRET_KEY}
 shipping-service-url: ${SHIPPING_SERVICE_URL}
