--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -3,13 +3,16 @@ spring:
     timeout-per-shutdown-phase: 10s
 server:
   shutdown: graceful
-  port: 8086
 
 ---
 spring:
   config:
     activate:
       on-profile: dev
+
+server:
+  port: 8086
+
 payment:
   paypal-service-url: http://localhost:8089/api/paypal
   bank-service-url: http://localhost:8083/api/bank
@@ -23,6 +26,10 @@ spring:
   config:
     activate:
       on-profile: prod
+
+server:
+  port: 8080
+
 payment:
   paypal-service-url: ${PAYPAL_SERVICE_URL}
   bank-service-url: ${BANK_SERVICE_URL}
