--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -3,7 +3,6 @@ spring:
     timeout-per-shutdown-phase: 10s
 server:
   shutdown: graceful
-  port: 8087
 
 ---
 spring:
@@ -18,6 +17,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+
+server:
+  port: 8087
 
 product-quantity-threshold: 10
 product-service-secret-key: "3e02714e-4d78-11ed-bdc3-0242ac120002"
@@ -34,6 +36,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+
+server:
+  port: 8080
 
 product-quantity-threshold: ${PRODUCT_QUANTITY_THRESHOLD}
 product-service-secret-key: ${PRODUCT_SERVICE_SECRET_KEY}
