--- a/shipment-service/src/main/resources/application.yml
+++ b/shipment-service/src/main/resources/application.yml
@@ -1,2 +1,14 @@
+spring:
+  config:
+    activate:
+      on-profile: dev
 server:
   port: 8088
+
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+server:
+  port: 8080
