--- a/kubernetes/config/service-secret.yml
+++ b/kubernetes/config/service-secret.yml
@@ -1,7 +1,15 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: secret
-type: kubernetes.io/basic-auth
-stringData:
-  password: mysql
+  name: service-secret
+type: Opaque
+data:
+  order-service-secret-key: M2UwMjVlMTYtNGQ3OC0xMWVkLWJkYzMtMDI0MmFjMTIwMDAy
+  account-service-secret-key: M2UwMjY3NDQtNGQ3OC0xMWVkLWJkYzMtMDI0MmFjMTIwMDAy
+  authentication-service-secret-key: M2UwMjY5MjQtNGQ3OC0xMWVkLWJkYzMtMDI0MmFjMTIwMDAy
+  bank-service-secret-key: M2UwMjZjMDgtNGQ3OC0xMWVkLWJkYzMtMDI0MmFjMTIwMDAy
+  credit-service-secret-key: M2UwMjZkNjYtNGQ3OC0xMWVkLWJkYzMtMDI0MmFjMTIwMDAy
+  paypal-service-secret-key: M2UwMjZlYmEtNGQ3OC0xMWVkLWJkYzMtMDI0MmFjMTIwMDAy
+  product-service-secret-key: M2UwMjcxNGUtNGQ3OC0xMWVkLWJkYzMtMDI0MmFjMTIwMDAy
+  shipping-service-secret-key: M2UwMjc5NDYtNGQ3OC0xMWVkLWJkYzMtMDI0MmFjMTIwMDAy
+  payment-service-secret-key: M2UwMjZlYmEtNGQ3OC0xMWVkLWJkYzMtMDI0MmFjMTIwMDAy
