--- a/kubernetes/services/account-deployment.yml
+++ b/kubernetes/services/account-deployment.yml
@@ -38,8 +38,8 @@ spec:
               value: "prod"
             - name: ACCOUNT_SERVICE_SECRET_KEY
               valueFrom:
-                configMapKeyRef:
-                  name: service-configmap
+                secretKeyRef:
+                  name: service-secret
                   key: account-service-secret-key
           ports:
             - name: http
