--- a/kubernetes/dependencies/mysql-deployment.yml
+++ b/kubernetes/dependencies/mysql-deployment.yml
@@ -3,44 +3,49 @@ kind: Service
 metadata:
   name: mysql
 spec:
+  type: NodePort
+  selector:
+    app: mysql
   ports:
     - protocol: TCP
       port: 3306
       targetPort: 3306
       nodePort: 30306
-  selector:
-    app: mysql
-  type: NodePort
-
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
 spec:
+  replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 100%
   selector:
     matchLabels:
       app: mysql
-  strategy:
-    type: Recreate
   template:
     metadata:
       labels:
         app: mysql
     spec:
       containers:
-        - image: mysql:8.0.30
-          name: mysql
-          env:
-            - name: MYSQL_ROOT_PASSWORD
-              value: mysql
+        - name: mysql
+          image: mysql:8.0.30
           ports:
             - containerPort: 3306
               name: mysql
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              value: mysql
+          envFrom:
+            - configMapRef:
+                name: database-init-config
           volumeMounts:
-            - name: mysql-persistent-storage
-              mountPath: /var/lib/mysql
+            - name: database-init-config
+              mountPath: /docker-entrypoint-initdb.d
       volumes:
-        - name: mysql-persistent-storage
-          persistentVolumeClaim:
-            claimName: mysql-pv-claim
+        - name: database-init-config
+          configMap:
+            name: database-init-config
